[package]
authors = []
edition = "2018"
name = "cave"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
specs = "0.14"
specs-derive = "0.4"

[dependencies.sdl2]
default-features = false
features = ["image"]
version = "0.34.2"

[[example]]
name = "fill_rect"

[[example]]
name = "render_texture"

[[example]]
name = "movement_1"

[[example]]
name = "animation"

[[example]]
name = "learning_ecs"
